# my-marketplace

./: .gitignore  CLAUDE.md  README.md  registry.json
.claude-plugin/: marketplace.json
config/: schema.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  test.txt
plugins/custom/hello-demo/: README.md
plugins/custom/hello-demo/.claude/agents/: demo.md
plugins/custom/hello-demo/.claude/commands/: hello.md
plugins/hello-demo/: README.md
plugins/hello-demo/.claude-plugin/: plugin.json
plugins/hello-demo/agents/: demo.md
plugins/hello-demo/hooks/: hooks.json
plugins/python-project-standard/: README.md
plugins/python-project-standard/.claude-plugin/: plugin.json
plugins/python-project-standard/agents/: python-setup.md
plugins/python-project-standard/templates/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  __init__.py  ci.yml  config.py  logger.py  main.py  pyproject.toml  run-dev.sh  run-prod.sh  run.sh  test__init__.py  test_config.py  test_logger.py  test_main.py
plugins/react-stack-standard/: README.md
plugins/react-stack-standard/.claude-plugin/: plugin.json
plugins/react-stack-standard/agents/: react-setup.md
plugins/react-stack-standard/templates/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf  package.json.scripts
plugins/react-stack-standard/templates/test/: Button.spec.tsx  cn.spec.ts  setup.ts  useCounter.spec.ts
scripts/: add-plugin.sh
